<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.armoviles.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_axolotl"
            app:destination="@id/nav_axolotl"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_panda"
            app:destination="@id/nav_panda"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_store"
            app:destination="@id/nav_store"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_galleryforced"
        android:name="com.example.armoviles.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_axolotl"
        android:name="com.example.armoviles.ui.animal.AnimalFragment"
        android:label="@string/menu_axolotl"
        tools:layout="@layout/fragment_animal" />
    <fragment
        android:id="@+id/nav_panda"
        android:name="com.example.armoviles.ui.animal2.Animal2Fragment"
        android:label="@string/menu_panda"
        tools:layout="@layout/fragment_animal2" />
    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.armoviles.ui.store.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.armoviles.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <activity
        android:id="@+id/nav_gallery"
        android:name="com.example.armoviles.HomeActivity"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_home" />

</navigation>